fixed form padding issue and code alignment

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -2,8 +2,8 @@
 	.hero-text-box {
 		width: 100%;
 		padding: 0 2%;
-		
 	}
+
 	.row {
 		padding: 0 2%;
 	}
@@ -12,6 +12,7 @@
 @media only screen and (max-width: 1023px) {
 	body {font-size: 18px;}
 	section {padding: 60px 0;}
+	
 	.long-copy {
 		width: 80%;
 		margin-left: 10%;
@@ -38,7 +39,7 @@
 		.contact-form { width: 90%;}
 	}
 
-	@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
 		body { font-size: 16px; }
 		section {padding: 30px 0;}
 
@@ -78,7 +79,6 @@
 		.sticky .main-nav li a:visited {
 			padding: 9px 0;
 		}
-
 
 		.sticky .mobile-nav-icon  {margin-top: 10px;}
 		.sticky .mobile-nav-icon i {color: #555;}
@@ -120,14 +120,12 @@
 			position: relative;
 			width: 100%;
 			height: auto;
-			padding-top: 20px 0px;
+			padding-top: 20px;
 		}
 
 	}
 
-	@media only screen and (max-width: 480px) { /*Less than or equal to 480px */
+	@media only screen and (max-width: 480px) {
 		section {padding: 25px 0;}
-		.contact-form{width: 100%}
-
+		.contact-form{width: 100%;}
 	}
-
